Identity server 4 main function finished
main function finished

--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Auth/LogIn.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Auth/LogIn.cshtml
@@ -10,8 +10,8 @@
         <div asp-validation-summary="All" class="text-danger"></div>
         <form asp-action="LogIn" method="post">
             <div class="form-group">
-                <label asp-for="UserName">UserName</label>
-                <input asp-for="UserName" class="form-control" placeholder="Enter UserName">
+                <label asp-for="UserEmail">UserEmail</label>
+                <input asp-for="UserEmail" class="form-control" placeholder="Enter UserEmail">
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password</label>
