--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/CreateRole.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/CreateRole.cshtml
@@ -15,10 +15,8 @@
                 <input asp-for="RoleName" class="form-control" placeholder="RoleName">
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12 controls">
+                    <button type="submit" class="btn btn-primary">Create</button>
                     <button type="button" class="btn btn-warning cancel">Cancel</button>
                 </div>
             </div>
