--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/EditPermission.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/EditPermission.cshtml
@@ -17,10 +17,8 @@
                 <input asp-for="PermissionValue" class="form-control" placeholder="PermissionValue" value="@Model.PermissionValue">
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12 controls">
+                    <button type="submit" class="btn btn-primary">Save</button>
                     <button type="button" class="btn btn-warning cancel">Cancel</button>
                 </div>
             </div>
@@ -28,9 +26,4 @@
 
     </div>
 
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <p class="text-center"><a href="~/home/rolelist" class="btn btn-primary">Go To List</a></p>
-    </div>
 </div>
