--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/EditRole.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/EditRole.cshtml
@@ -12,8 +12,8 @@
                 <label asp-for="RoleName">RoleName</label>
                 <input asp-for="RoleName" class="form-control" placeholder="UserName" value="@Model.RoleName">
             </div>
-        
-      
+
+
             <h4>Role Permissions</h4>
             @foreach (var perm in Model.AllPermissions)
             {
@@ -22,10 +22,8 @@
                 </div>
             }
             <div class="row">
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12 controls">
+                    <button type="submit" class="btn btn-primary">Save</button>
                     <button type="button" class="btn btn-warning cancel">Cancel</button>
                 </div>
             </div>
@@ -33,9 +31,4 @@
 
     </div>
 
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <p class="text-center"><a href="~/home/rolelist" class="btn btn-primary">Go To List</a></p>
-    </div>
 </div>
