--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/EditUser.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/EditUser.cshtml
@@ -31,20 +31,13 @@
                 </div>
             }
             <div class="row">
-                <div class="col-md-6">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12 controls">
+                    <button type="submit" class="btn btn-primary">Save</button>
                     <button type="button" class="btn btn-warning cancel">Cancel</button>
                 </div>
             </div>
         </form>
-   
+
     </div>
-  
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <p class="text-center"><a href="~/home/userlist" class="btn btn-primary">Go To List</a></p>
-    </div>
+
 </div>
