--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/Index.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Home/Index.cshtml
@@ -1,25 +1,1 @@
-﻿<nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
-    <a class="navbar-brand" href="~/home/index">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="~/home/userlist">Users <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="~/home/rolelist">Roles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="~/home/permissionlist">Permissions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="~/home/clientlist">Clients</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="~/home/ApiResouceList">API Resources</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+﻿<h1>This is home page</h1>
