--- a/MultiTenant/MultiTenant.IdentityServerFour/Views/Shared/_Layout.cshtml
+++ b/MultiTenant/MultiTenant.IdentityServerFour/Views/Shared/_Layout.cshtml
@@ -10,33 +10,37 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <div>
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/home/index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/home/userlist">Users</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/home/rolelist">Roles</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/home/permissionlist">Permissions</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/home/clientlist">Clients</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/home/ApiResouceList">API Resources</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        @if (User != null && User.IsInRole("Admin"))
+        {
+            <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/home/index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/home/userlist">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/home/rolelist">Roles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/home/permissionlist">Permissions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/home/clientlist">Clients</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/home/ApiResouceList">API Resources</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        }
+
         @RenderBody()
     </div>
     <footer class="mt-auto py-3 bg-primary text-white-50">
